--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "docx": "^9.5.1",
+    "dompurify": "^3.1.6",
     "framer-motion": "^12.23.16",
     "lucide-react": "^0.544.0",
     "marked": "^17.0.0",
