--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
     "@types/pg": "^8.15.5",
+    "@vercel/blob": "^2.0.0",
     "archiver": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
