--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint",
     "test": "TMPDIR=./tmp vitest --run --coverage=false",
     "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "test:e2e:ui": "playwright test --ui",
+    "fos:decisions": "node scripts/fos/fos-decisions-pipeline.mjs",
+    "fos:chunked": "node scripts/fos/fos-chunked-runner.mjs",
+    "fos:report": "node scripts/fos/report-progress.mjs"
   },
   "dependencies": {
     "@auth/core": "^0.41.0",
@@ -40,6 +43,8 @@
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
     "@types/pg": "^8.15.5",
+    "@upstash/ratelimit": "^1.2.1",
+    "@upstash/redis": "^1.36.1",
     "@vercel/blob": "^2.0.0",
     "archiver": "^7.0.1",
     "class-variance-authority": "^0.7.1",
@@ -48,12 +53,14 @@
     "date-fns": "^4.1.0",
     "docx": "^9.5.1",
     "dompurify": "^3.1.6",
+    "file-type": "^18.7.0",
     "framer-motion": "^12.23.16",
     "lucide-react": "^0.544.0",
     "marked": "^17.0.0",
     "next": "15.5.9",
     "next-auth": "^5.0.0-beta.30",
     "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.16.3",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
@@ -76,6 +83,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "canvas": "^3.2.0",
+    "clamscan": "^2.4.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "sharp": "^0.34.5",
